--- a/Evidencias1.css
+++ b/Evidencias1.css
@@ -1,23 +1,40 @@
-body{background-color: rgb(0, 0, 0);}
+body{
+    background-image : url(./fondo-futurista-abstracto-diseno-3d_1361-3532.avif);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 img{
     height: auto ;
     width:  auto;
+}   
+.punto{
+ list-style: none;
 }
+
 h1{
  font-family: 'Prata', serif;;
 }
-.box {
-    background-color: rgb(0, 0, 0);
-    color: rgb(61, 61, 61);
-    border: 2px solid #8f8f8f; 
-    text-align: horizontal; 
+.button1 {
     display: inline-block;
-    width: auto;
-    height: auto;
-    font-size: 1.3em;
-    color: black;
-}
-.button:hover {
-    background-color: #4CAF50; /* Green */
-    color: white;
-}
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;	
+    text-decoration: none;
+    outline: none;
+    color: #73d71b00 ;/*punto culero*/
+    background-color: #9184ae00;/*primer color */
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #0d002c; }/*segunda margen */
+.button1:hover {background-color: #552bb6}/*segundo color */
+.button1:active {
+  background-color: #321577; /* nose */
+  box-shadow: 0 5px #2e1469;/* nose para que */
+  transform: translateY(4px);
+  }
+  .raya{
+    text-decoration: none;
+  }
+ 
