--- a/Evaluacion_de_requisitos/oferente.css
+++ b/Evaluacion_de_requisitos/oferente.css
@@ -1,22 +1,22 @@
 .button1 {
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
-    cursor: pointer;
-    text-align: center;	
-    text-decoration: none;
-    outline: none;
-    color: #73d71b00 ;/*punto culero*/
-    background-color: #9184ae00;/*primer color */
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #0d002c; }/*segunda margen */
-.button1:hover {background-color: #552bb6}/*segundo color */
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;	
+  text-decoration: none;
+  outline: none;
+  list-style: none;
+  background-color: #9184ae00;/*primer color */
+  border: none;
+  border-radius: 30px;
+  box-shadow: 0 5px #800000; }/*segunda margen */
+.button1:hover {background-color: #3c0101}/*segundo color */
 .button1:active {
-  background-color: #321577; /* nose */
-  box-shadow: 0 5px #2e1469;/* nose para que */
-  transform: translateY(4px);
-  }
+background-color: #690e0e; /* nose */
+box-shadow: 0 10px #800000;/* nose para que */
+transform: translateY(4px);
+} 
 .raya{
     text-decoration: none;/*para quitar la raya baja de el link */
   }
@@ -24,5 +24,5 @@
     background-image: url(./img/1000_F_572180546_LnklEWgI5n413HvqsPDDw5tOEeQZjvVY.jpg);
     background-repeat: no-repeat;/* no repetir la imag*/
     background-attachment: fixed;
-    background-size: cover;/**/ 
-  }
+    background-size: cover;/**/  }
+h1{color: #410404;}
