--- a/Evaluacion_de_requisitos/oferente.css
+++ b/Evaluacion_de_requisitos/oferente.css
@@ -24,5 +24,5 @@ transform: translateY(4px);
     background-image: url(./img/1000_F_572180546_LnklEWgI5n413HvqsPDDw5tOEeQZjvVY.jpg);
     background-repeat: no-repeat;/* no repetir la imag*/
     background-attachment: fixed;
-    background-size: cover;/**/  }
-h1{color: #410404;}
+    background-size: cover;/**/  
+  }
