--- a/Evidencias1.css
+++ b/Evidencias1.css
@@ -1,12 +1,12 @@
 body{
-    background-image : url(./fondo-futurista-abstracto-diseno-3d_1361-3532.avif);
+    background-image : url(./f36.gif);
     background-repeat: no-repeat;/**/
-    background-attachment: fixed;/**/
     background-size: cover;/**/
 }
 img{
     height: auto ;/**/
     width:  auto;/**/
+    border-radius: 15px;
 }   
 .punto{
  list-style: none;/**/
@@ -27,7 +27,7 @@ h1{
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #0d002c; }/*segunda margen */
-.button1:hover {background-color: #552bb6}/*segundo color */
+.button1:hover {background-color: #552bb6a3}/*segundo color */
 .button1:active {
   background-color: #321577; /* nose */
   box-shadow: 0 5px #2e1469;/* nose para que */
