--- a/css/Index.css
+++ b/css/Index.css
@@ -1,5 +1,5 @@
 body{
-    background-image : url(./f36.gif);
+    background-image : url(./img-Index/f36.gif);
     background-repeat: no-repeat;/**/
     background-size: cover;/**/
 }
