--- a/css/tabla.css
+++ b/css/tabla.css
@@ -6,7 +6,7 @@ table{
     border-collapse: collapse;
 }
 th, td{
-    border: 1px solid rgba(250, 251, 251, 0.561) ;
+    border: 1px solid rgba(246, 255, 255, 0.299) ;
     padding: 10px 15px 8px 15px;
     text-align: center;
     
@@ -25,7 +25,7 @@ th, td{
     color: #ffffff;
 }
 .gris{
-    background-color: rgb(178, 178, 178);
+    background-color: rgba(178, 178, 178, 0.676);
 }
 .verde{
     background-color: rgb(0, 129, 19);
