--- a/css/Tienda-Molina.css
+++ b/css/Tienda-Molina.css
@@ -34,3 +34,10 @@ input{
     border-radius: 15px;
     margin-bottom: 20px;
 }
+select{
+    padding: 10px 25px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    margin-left: 32px;
+    margin-right: 32px;
+}
