--- a/css/menu-icon.css
+++ b/css/menu-icon.css
@@ -4,9 +4,6 @@
     padding-right: 1px;
 
 }
-.icon_style:hover{
-    color: rgb(226, 5, 5);
-}
 .pulsor:hover{
     background-color: #b1b0b9;
     border-radius: 5px;
@@ -15,7 +12,7 @@ nav{
     position: fixed;
     top: 0;
     left: 0;
-    width: 220px;
+    width: 350px;
     height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border: 1px solid;
@@ -30,6 +27,13 @@ ul {
 a {
     text-decoration: none;
 }
+li:hover{
+    cursor: pointer;
+    color: rgb(226, 5, 5);
+}
 li{
-    margin: 15px;
+    margin: 10px;
+}
+i{
+    margin-right: 10px;
 }
