--- a/css/menu-icon.css
+++ b/css/menu-icon.css
@@ -12,6 +12,7 @@ nav{
     position: fixed;
     top: 0;
     left: 0;
+    width: 350px;
     height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border: 1px solid;
@@ -34,5 +35,5 @@ li{
     margin: 10px;
 }
 i{
-    margin-right: 10px;
+    margin-right: 5px;
 }
