--- a/css/transition.css
+++ b/css/transition.css
@@ -6,13 +6,26 @@
     transition: all 1s;
     position: fixed;
     left: -250px;
-   
-    
-
 }
 .box-1:hover{
-  
     cursor: pointer;
     left: 2px;
     background-color: aqua;
+}
+.box-2{
+    width: 300px;
+    background-color: blueviolet;
+    border-radius: 100%;
+    height: 300px;
+    transition: all 1s;
+    position: fixed;
+    text-align: center;
+    left: 40%;
+    right: 50%;
+}
+.box-2:hover{
+    cursor: pointer;
+    background-color: rgb(42, 165, 138);
+    width: 500px;
+    height: 500px;
 }
