--- a/css/toglee.css
+++ b/css/toglee.css
@@ -1,86 +1,58 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: tahoma, sans-serif;
+* {
+    font-family: 'Gill Sans', sans-serif;
 }
-.tex-on-off{
+.contenedor1-off {
+    width: 250px;
+    height: 120px;
+    background: rgb(241, 111, 5);
+    border-radius: 55px;
+    padding: 3px;
+    transition: all 1s;
+}
+.contenedor1-on {
+    width: 250px;
+    height: 120px;
+    border-radius: 55px;
+    padding: 3px;
+    transition: all 1s;
+    background-color: rgb(230, 54, 11);
+    cursor: pointer;
+}
+.contenedor2-off {
+    position: relative;
+    width: 110px;
+    height: 110px;
+    
+    top: -32px;
+    left: 5px;
+    border-radius: 50%;
+    transition: all 1s;
+     background-color: rgb(230, 54, 11);
+    
+}
+.contenedor2-on {
+    position: relative;
+    width: 110px;
+    height: 110px;
+   
+    top: -32px;
+    left: 135px;
+    border-radius: 50%;
+    transition: all 1s;
+   background: rgb(241, 111, 5);
+}
+.text-on-off {
     font-size: 2em;
     font-weight: 700;
-    color: aliceblue;
+    color: white;
 }
-.tex-on{
+.text-on {
     position: relative;
     top: 39px;
-    left: 170px;
+    left: 20px;
 }
-.text-off{
+.text-off {
     position: relative;
     top: 39px;
-    left: -30px;
-}
-.padre{
-    position: relative;
-  
-    height: 120px;
-    width: 250px;
-    border-radius: 60px;
-    margin: 50px;
-background-color: burlywood; 
-}
-.padre:hover{
-    transition: all 1s;
-    background-color: rgb(128, 93, 48);
-
- }
-.hijo{
-    position: relative;
-    left: 5px;
-    top: -34px;
-    background-color: rgb(255, 209, 91);
-    height: 110px;
-    width: 110px;
-    border-radius: 55px;
-
-}
-/* .hijo:hover{
-    transition: all 2s;
-    margin-left: 130px;
-    cursor: pointer;
-    background-color: rgb(255, 183, 0);
-} */
-.padre:hover >.hijo{
-    transition: all 1s;
-    position: relative;
-    left: 135px;
-    top: -34px;
-    height: 110px;
-    width: 110px;
-    border-radius: 55px;
-
-}
-
-.hijo-cam{
-
-position: relative;
-left: 5px;
-top: -34px;
-
-height: 110px;
-width: 110px;
-border-radius: 55px;
-
-transition: all 1s;
-background-color: rgb(255, 209, 91);
-transition: all 1s;
-background-color: rgb(128, 93, 48);
-}
-.padre-cam{
-position: relative;
-left: 5px;
-top: -34px;
-height: 110px;
-width: 110px;
-
-
-
+    left: 120px;
 }
