--- a/css/flex-box.css
+++ b/css/flex-box.css
@@ -13,6 +13,36 @@
     background-color: rgb(30, 30, 163);
    
 }
+.box-3{
+    width: 100%;
+    background-color: rgb(22, 22, 92);
+    display: flex;
+    flex-direction: column-reverse;
+}
+.box-4{
+    width: 100%;
+    background-color: rgb(22, 22, 92);
+    display: flex;
+    flex-direction: row-reverse;
+}
+.box-5{
+    width: 100%;
+    background-color: rgb(22, 22, 92);
+    display: flex;
+    flex-direction: inherit;
+}
+.box-6{
+    width: 100%;
+    background-color: rgb(22, 22, 92);
+    display: flex;
+    flex-direction: initial;
+}
+.box-7{
+    width: 100%;
+    background-color: rgb(22, 22, 92);
+    display: flex;
+    flex-direction: unset;
+}
 
 .box-gen{
     width:300px ;
@@ -20,7 +50,6 @@
     margin: 20px;
     background: rgb(11, 119, 1);
 }
-
 .box{
     width: 100%;
     background-color: rgb(10, 145, 100);
