--- a/css/calendario.css
+++ b/css/calendario.css
@@ -52,17 +52,17 @@
 }
 .contenedor .dia{
     display: flex ;
-    background-color: blueviolet ;
+    background-color: rgba(137, 43, 226, 0.753) ;
     justify-content: center;
     align-items: center;
     color: white;
 }
 .contenedor .festivo{
-    background-color: rgb(78, 23, 129);
+    background-color: rgba(78, 23, 129, 0.829);
     color: white;
 }
 .box{
-background-color: black;
+background-color: rgba(0, 0, 0, 0.719);
 border: 1px solid  white;
 color: white;
 font-size: 30px;
