--- a/css/calendario.css
+++ b/css/calendario.css
@@ -42,7 +42,7 @@
     display: grid;
     border: firebrick;
     grid-template-columns: repeat(7,200px) ;
-    grid-template-rows:  repeat(6,100px)  ;
+    grid-template-rows:  repeat(7,100px)  ;
     grid-gap: 10px 20px;
     align-content: center;
     justify-content: center;
@@ -70,5 +70,15 @@ border: 1px solid  white;
 color: white;
 font-size: 30px;
 
+}
+.mes{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    grid-column-start: 1;
+    grid-column-end: 8;
+    background-color: white;
+    border-bottom: 5px solid blueviolet;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 35px;
 }
  
