--- a/css/calendario.css
+++ b/css/calendario.css
@@ -41,8 +41,8 @@
     height: 100vh;
     display: grid;
     border: firebrick;
-    grid-template-columns: repeat(7,200px) ;
-    grid-template-rows:  repeat(7,100px)  ;
+    grid-template-columns: repeat(7,100px) ;
+    grid-template-rows:  repeat(7,70px)  ;
     grid-gap: 10px 20px;
     align-content: center;
     justify-content: center;
@@ -57,6 +57,7 @@
     justify-content: center;
     align-items: center;
     color: white;
+   
 }
 .contenedor .festivo{
     border-radius: 15px;
@@ -68,8 +69,8 @@ border-radius: 15px;
 background-color: rgba(0, 0, 0, 0.719);
 border: 1px solid  white;
 color: white;
-font-size: 30px;
-
+font-size: 15px;
+padding: 3px;
 }
 .mes{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
