--- a/css/maquetacion.css
+++ b/css/maquetacion.css
@@ -36,6 +36,7 @@ header{
     justify-content: center;
     align-items: center;
 }
+
 .main-content{
   
     margin-top: 40px 70px;
@@ -74,66 +75,62 @@ header{
     line-height: 1.4em;
 }
 /* / Móviles en horizontal o tablets en vertical
-   ------------------------------------------------------------------------- / */
-@media (min-width: 768px) { 
+   ///////////////////////////////////////////////////////////////////////////////////////// / */
+
+/* Mobile phones */
+@media only screen and (min-width: 400px) and (max-width: 767px) {
+  
+  
     body{
         width: 100%;
         display: grid;
-        grid-template: "empty-left         main-page           empty-right"  100vh /
-                     minmax(30px,1fr)  minmax(700px, 1200px)   minmax(30px,1fr) ;
+        grid-template: "empty-left         main-page           empty-right"  50vh /
+                     minmax(10px,1fr)  minmax(100px, 420px)   minmax(10px,1fr) ;
     }
     .main-page{
         grid-area: main-page ;
     }
     header{
         display: grid;
-        margin-top: 50px;
+        margin-top: 10px;
         gap: 30px;
-        grid-template: "logo       main-menu" 80px / 
-                       150px       minmax(700px,100%);
+        grid-template: "logo       main-menu" 50px / 
+                       100px       minmax(50px,100%);
     }
     .logo{
-        border-radius: 15PX;
+        border-radius: 10px;
         grid-area:logo   ;
-        background-color: rgb(29, 55, 109);
     }
     .main-menu{
-        border-radius: 15PX;
+        border-radius: 10px;
         grid-area:main-menu ;
-        background-color: rgb(110, 110, 233);
     }
     .style-text{
-        font-family: Verdana, sans-serif;
-        font-size: 1.6em;
+        font-size: 1.2em;
         color: white;
         display: flex;
         justify-content: center;
-        align-items: center;
+
     }
+    
     .main-content{
       
-        margin-top: 40px 70px;
+        margin-top: 5px ;
         display: grid;
-        gap: 30px;
-        grid-template: " main-img   main-img    main-img" 600px 
+        gap: 15px;
+        grid-template: " main-img     main-img    main-img" 350px
                         "article-1    article-2   article-3"
-                        "article-4    article-5   article-6"450px / 
-                           1fr           1fr        1fr  ;
+                        "article-4    article-5   article-6"10000px / 
+                              1fr        1fr           1fr ;
     
     }
     .main-img{
+        width: 400px;
         border-radius: 15PX;
-        margin-top: 15PX;
+        margin-top: 10px;
         grid-area: main-img;
         background-color: rgb(58, 58, 175);
     }
-    .article-1{grid-area: article-1;}
-    .article-2{grid-area: article-2;}
-    .article-3{grid-area: article-3;}
-    .article-4{grid-area: article-4;}
-    .article-5{grid-area: article-5;}
-    .article-6{grid-area: article-6;}
-    
     .img-article{
         border-radius: 15PX;
         height: 350px;
@@ -143,160 +140,18 @@ header{
         padding-top: 30px;
         color: rgb(66, 66, 66);
         text-align: justify;
-        font-size: 1.2em;
+        font-size: 15px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         line-height: 1.4em;
     }
-}
- 
-/* / Tablets en horizonal y escritorios normales
-   ------------------------------------------------------------------------- / */
-@media (min-width: 1024px) { 
-    body{
-        width: 100%;
-        display: grid;
-        grid-template: "empty-left         main-page           empty-right"  100vh /
-                     minmax(30px,1fr)  minmax(700px, 1200px)   minmax(30px,1fr) ;
-    }
-    .main-page{
-        grid-area: main-page ;
-    }
-    header{
-        display: grid;
-        margin-top: 50px;
-        gap: 30px;
-        grid-template: "logo       main-menu" 80px / 
-                       150px       minmax(700px,100%);
-    }
-    .logo{
-        border-radius: 15PX;
-        grid-area:logo   ;
-        background-color: rgb(29, 55, 109);
-    }
-    .main-menu{
-        border-radius: 15PX;
-        grid-area:main-menu ;
-        background-color: rgb(110, 110, 233);
-    }
-    .style-text{
-        font-family: Verdana, sans-serif;
-        font-size: 1.6em;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .main-content{
-      
-        margin-top: 40px 70px;
-        display: grid;
-        gap: 30px;
-        grid-template: " main-img   main-img    main-img" 600px 
-                        "article-1    article-2   article-3"
-                        "article-4    article-5   article-6"450px / 
-                           1fr           1fr        1fr  ;
-    
-    }
-    .main-img{
-        border-radius: 15PX;
-        margin-top: 15PX;
-        grid-area: main-img;
-        background-color: rgb(58, 58, 175);
-    }
-    .article-1{grid-area: article-1;}
-    .article-2{grid-area: article-2;}
-    .article-3{grid-area: article-3;}
-    .article-4{grid-area: article-4;}
-    .article-5{grid-area: article-5;}
-    .article-6{grid-area: article-6;}
-    
-    .img-article{
-        border-radius: 15PX;
-        height: 350px;
-        background-color: blueviolet;
-    }
-    .style-text-article{
-        padding-top: 30px;
-        color: rgb(66, 66, 66);
-        text-align: justify;
-        font-size: 1.2em;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        line-height: 1.4em;
+}    
+/*////////////////////////////////////////////////////////////////////////////////*/
+/* tablet */
+@media only screen and (min-width: 767px) and (max-width: 1331px) {
+    body {
+        grid-template: "empty-left         main-page           empty-right" 100vh /
+                     minmax(30px,1fr) minmax(700px, 1200px) minmax(30px,1fr);
     }
 }
- 
-/* / Escritorios muy anchos
-   ------------------------------------------------------------------------- */ */
-@media (min-width: 1200px) { 
-    body{
-        width: 100%;
-        display: grid;
-        grid-template: "empty-left         main-page           empty-right"  100vh /
-                     minmax(30px,1fr)  minmax(700px, 1200px)   minmax(30px,1fr) ;
-    }
-    .main-page{
-        grid-area: main-page ;
-    }
-    header{
-        display: grid;
-        margin-top: 50px;
-        gap: 30px;
-        grid-template: "logo       main-menu" 80px / 
-                       150px       minmax(700px,100%);
-    }
-    .logo{
-        border-radius: 15PX;
-        grid-area:logo   ;
-        background-color: rgb(29, 55, 109);
-    }
-    .main-menu{
-        border-radius: 15PX;
-        grid-area:main-menu ;
-        background-color: rgb(110, 110, 233);
-    }
-    .style-text{
-        font-family: Verdana, sans-serif;
-        font-size: 1.6em;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .main-content{
-      
-        margin-top: 40px 70px;
-        display: grid;
-        gap: 30px;
-        grid-template: " main-img   main-img    main-img" 600px 
-                        "article-1    article-2   article-3"
-                        "article-4    article-5   article-6"450px / 
-                           1fr           1fr        1fr  ;
-    
-    }
-    .main-img{
-        border-radius: 15PX;
-        margin-top: 15PX;
-        grid-area: main-img;
-        background-color: rgb(58, 58, 175);
-    }
-    .article-1{grid-area: article-1;}
-    .article-2{grid-area: article-2;}
-    .article-3{grid-area: article-3;}
-    .article-4{grid-area: article-4;}
-    .article-5{grid-area: article-5;}
-    .article-6{grid-area: article-6;}
-    
-    .img-article{
-        border-radius: 15PX;
-        height: 350px;
-        background-color: blueviolet;
-    }
-    .style-text-article{
-        padding-top: 30px;
-        color: rgb(66, 66, 66);
-        text-align: justify;
-        font-size: 1.2em;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        line-height: 1.4em;
-    }
-}
+
+
