--- a/css/maquetacion.css
+++ b/css/maquetacion.css
@@ -78,110 +78,62 @@ header{
    ///////////////////////////////////////////////////////////////////////////////////////// / */
 
 /* Mobile phones */
-@media only screen and (min-width :480px) and (max-width :700px) {
-    *{
-        padding: 0;
-        margin: 0;  
+@media only screen and (max-width :780px) {
+    body {
+        grid-template:
+          "main-page"
+          auto
+          "main-page"
+          auto / 100%;
     }
-    body{
-        width: 100%;
-        display: grid;
-        grid-template: "main-page" 100vh / 1fr;
-    }
-    .main-page{
-        grid-area: main-page ;
-    }
-    header{
-        display: grid;
-        margin-top: 50px;
-        gap: 30px;
-        grid-template: "logo       main-menu" 80px / 
-                       150px       minmax(700px,100%);
-    }
-    .logo{
-        border-radius: 15PX;
-        grid-area:logo   ;
-        background-color: rgb(29, 55, 109);
-    }
-    .main-menu{
-        border-radius: 15PX;
-        grid-area:main-menu ;
-        background-color: rgb(110, 110, 233);
+    
+    .main-page {
+        margin: 20px;
+      }
+      header{
+        grid-template: "logo    main-menu"50px/
+                        100px       minmax(50px , 400px);
+        justify-content: center;
+      }
+      .main-content{
+        grid-template: 
+        "main-img"
+        550px
+        "article-1"
+        auto
+        "article-2"
+        auto
+        "article-3"
+        auto
+        "article-4"
+        auto
+        "article-5"
+        auto
+        "article-6"
+        auto / 100%;
+      }
+      .img-article{
+        height: 200px;
+      }
+      .style-text-article{
+        padding-top: 30px;
+        color: rgb(66, 66, 66);
+        text-align: justify;
+        font-size: 1em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        line-height: 1.4em;
     }
     .style-text{
+        padding-top: 10px;
         font-family: Verdana, sans-serif;
-        font-size: 1.6em;
+        font-size: 20px;
         color: white;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    
-    .main-content{
-      
-        margin-top: 40px 70px;
-        display: grid;
-        gap: 30px;
-        grid-template-areas:
-            "main-img"
-            "article-1"
-            "article-2"
-            "article-3"
-            "article-4"
-            "article-5"
-            "article-6";
-    }
-    .main-img{
-        border-radius: 15PX;
-        margin-top: 15PX;
-        grid-area: main-img;
-        background-color: rgb(58, 58, 175);
-    }
-    .article-1{grid-area: article-1;}
-    .article-2{grid-area: article-2;}
-    .article-3{grid-area: article-3;}
-    .article-4{grid-area: article-4;}
-    .article-5{grid-area: article-5;}
-    .article-6{grid-area: article-6;}
-    
-    .img-article{
-        border-radius: 15PX;
-        height: 350px;
-        background-color: blueviolet;
-    }
-    .style-text-article{
-        padding-top: 30px;
-        color: rgb(66, 66, 66);
-        text-align: justify;
-        font-size: 1.2em;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        line-height: 1.4em;
-    }
-  
-        .style-text-article {
-           font-size :1.0em ;
-        }
-        .style-text {
-           font-size :1.4em ;
-        }
-        header {
-           margin-top :30px ;
-           gap :20px ;
-        }
-        .main-content {
-           margin-top :20px ;
-           gap :20px ;
-        }
-    
- 
-}    
-/*////////////////////////////////////////////////////////////////////////////////*/
-/* tablet */
-@media only screen and (min-width: 767px) and (max-width: 1331px) {
-    body {
-        grid-template: "empty-left         main-page           empty-right" 100vh /
-                     minmax(30px,1fr) minmax(700px, 1200px) minmax(30px,1fr);
-    }
 }
 
+/*////////////////////////////////////////////////////////////////////////////////*/
+/* tablet */
 
