--- a/css/amazon.css
+++ b/css/amazon.css
@@ -162,7 +162,79 @@ header {
     color: white;
     font-size: 2.5em;
 }
+.botones-inferiores{
+    background-color: rgb(49, 69, 95); 
+    height: 45px;
+    color: white;
+}
 
+.bx-menu{
+    font-size: 2.5em;
+    padding-top: 5px;
+}
+.btn-text{
+
+    padding: 8px 9px ;
+    font-size: 15px;
+}
+
+ .box-modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+
+}
+.modal{
+    width: 95%;
+    height: 87%;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: auto;
+    box-shadow: 0 0 10px rgba(0,0,0,.5);
+    padding: 20px;
+    position: relative;
+    grid-template: box-img-modal info-modal /
+                        1fr          350px;
+    
+} 
+.main-img-modal{
+ grid-area:  box-img-modal;
+ background-color: blue;
+ width: 50%;
+ height: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+
+}
+
+.info-modal{
+    grid-area: info-modal;
+    background-color: rgb(85, 85, 139);
+    width: 50%;
+    height: 50%;
+}
+
+
+
+.btn-close{
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 2em;
+    border: 1px solid grey;
+    border-radius: 4px;
+    padding: 0 3px;
+    line-height: 1.1em;
+    box-shadow:gray ;
+}
 
 
 
