--- a/css/amazon.css
+++ b/css/amazon.css
@@ -253,38 +253,36 @@ header {
     margin-top: 10px;
     display: grid;
     grid-template:"box-img-1 box-img-2 box-img-3 box-img-4 " 
-                  "box-img-5 box-img-6 box-img-7" /
-                   1fr          1fr        1fr     1fr ;
+                  "box-img-5 box-img-6  box-img-7 box-img-8" /
+                   repeat(4, 1fr);
 }
+.box-modal-img > div {
+    display: flex;
+    justify-content: center;
+}
+
+.box-img-1{grid-area: box-img-1;}
+.box-img-2{grid-area: box-img-2;}
+.box-img-3{grid-area: box-img-3;}
+.box-img-4{grid-area: box-img-4;}
+.box-img-5{grid-area: box-img-5;}
+.box-img-6{grid-area: box-img-6;}
+.box-img-7{grid-area: box-img-7;}
+.box-img-8{grid-area: box-img-8;}
 .img{
     background-color: #fff;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 60px;
+    height: 60px;
 }
-.box-img-1{
-    grid-area: box-img-1;
-    display: flex; 
-    top: 0;
-}
-.box-img-2{
-    grid-area: box-img-2;
-}
-.box-img-3{
-    grid-area: box-img-3;
-}
-.box-img-4{
-    grid-area: box-img-4;
-}
-.box-img-5{
-    grid-area: box-img-5;
-}
-.box-img-6{
-    grid-area: box-img-6;
-}
-.box-img-7{
-    grid-area: box-img-7;
-}
+
+
+
+
+
+
+
+
+
 
 
 
