--- a/css/Carrito-compras.css
+++ b/css/Carrito-compras.css
@@ -9,6 +9,7 @@
     border: 2px solid grey;
     border-radius: 10px;
     margin: 10px 10px;
+    display: none !important;
 }
 .box-subtotal{
     padding: 20px 20px 20px 20px;
