--- a/css/amazon.css
+++ b/css/amazon.css
@@ -607,7 +607,14 @@ header {
 
 /*responsive laptop*/
 @media only screen and (min-width :300px) and (max-width :1104px){
-
+    .box-contenido-producto{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template: " box-contenido-img-muestra  box-contenido-img-grande   box-contenido-deescripcion   box-contenido-compra " 45em/
+                                        4.5em                  2fr                           30em                15em               ;
+    }
 }
 
 /*////////////////// responsive teléfono///////*/
